store componeant print to

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 </head>
 
 <body>
-<button class="btn btn-danger">hi</button>
+
+    <h1> Almost Amazon</h1>
+    <div class="row">
+        <div id="store-container" class="col-6"></div>
+
+    </div>
+
+
 
 
 
@@ -29,7 +36,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <script src="./javascripts/main.js"></script>
+    <script type="module" src="./javascripts/main.js"></script>
 </body>
 
 </html>
